Added better view for events, split colored and black number cards in Help

--- a/src/styles/ui/cards/Card.scss
+++ b/src/styles/ui/cards/Card.scss
@@ -86,7 +86,7 @@ $borderMargin: 0.5em;
 $ribbonColor: white;
 
 .ribbon {
-  font-size: 0.5rem;
+  font-size: 0.18em;
   position: relative;
   display: inline-block;
   font-family: $themeFont;
