--- a/src/styles/ui/HelpWindow.scss
+++ b/src/styles/ui/HelpWindow.scss
@@ -16,6 +16,10 @@
   margin-bottom: 2em;
 }
 
+.help-container .header {
+  margin-bottom: 0.5em;
+}
+
 .help-container h3 {
   text-align: left;
   color: $terracotta;
@@ -27,7 +31,7 @@
 
 .help-container p {
   max-width: 100%;
-  margin: 1em 0;
+  margin: 0 0 2em;
   text-align: justify;
 
   .help-section.rules {
