--- a/src/styles/ui/UiElements.scss
+++ b/src/styles/ui/UiElements.scss
@@ -222,4 +222,12 @@ $buttonHeight: 1.75em;
   width: 5em;
   height: 5em;
   fill: $terracotta;
+
+  &.center {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
