Added ErrorBoxes for most common scenarios.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,11 @@ body {
   background-color: $blueBlack;
 }
 
+code {
+  display: block;
+  white-space: pre-wrap;
+}
+
 #root {
   @include fullscreen;
 }
