--- a/src/styles/ui/ErrorBox.scss
+++ b/src/styles/ui/ErrorBox.scss
@@ -1,5 +1,13 @@
 @import 'theme';
 
+.error-center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .error-box {
   color: $blueGray;
   background-color: $terracotta;
@@ -13,6 +21,7 @@
 
 .error-icon {
   margin: 0;
+  flex-shrink: 0;
   font-size: 5em;
   line-height: 1em;
   font-weight: 500;
@@ -41,4 +50,11 @@
 
 .error-content p {
   margin: 0;
+}
+
+.error-content code {
+  background-color: $blueGray;
+  color: $terracotta;
+  border-radius: 0.3em;
+  padding: 0.3em;
 }
