--- a/src/styles/ui/AppContainer.scss
+++ b/src/styles/ui/AppContainer.scss
@@ -3,9 +3,7 @@
 .app-container {
   position: absolute;
   @include fullscreen;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include center;
   overflow: hidden;
 }
 .app-container.animated {
