--- a/src/styles/ui/ErrorBox.scss
+++ b/src/styles/ui/ErrorBox.scss
@@ -1,11 +1,7 @@
 @import 'theme';
 
 .error-center {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include fillCenter;
 }
 
 .error-box {
