--- a/src/styles/ui/UiElements.scss
+++ b/src/styles/ui/UiElements.scss
@@ -127,9 +127,7 @@ $buttonHeight: 1.75em;
 // SingleSelect
 
 .singleselect-container {
-  display: flex;
-  justify-content: center;
-  align-content: center;
+  @include center;
 }
 
 .singleselect-item {
@@ -224,10 +222,6 @@ $buttonHeight: 1.75em;
   fill: $terracotta;
 
   &.center {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include fillCenter;
   }
 }
