--- a/src/styles/ui/PlayerList.scss
+++ b/src/styles/ui/PlayerList.scss
@@ -8,17 +8,23 @@
 }
 
 .player-item {
+  // see transition in PlayerList.js!
   width: 100%;
-  height: 2.8em; // see transition in PlayerList.js!
+  height: 2.8em;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   background-color: $blueMediumGray;
   box-shadow: $dropShadow;
-  margin: 0.6em 0;
+  margin-bottom: 0.6em;
   padding: 0.6em 0.9em 0.6em 0.6em;
   border-radius: 0.3em;
   box-sizing: border-box;
+  overflow: hidden;
+
+  &:first-child {
+    margin-top: 0.6em;
+  }
 }
 
 .player-item-text {
