Added navigation buttons to HelpWindow

--- a/src/styles/ui/ToolWindow.scss
+++ b/src/styles/ui/ToolWindow.scss
@@ -1,6 +1,7 @@
 @import 'theme';
 
 .toolwindow-container {
+  position: relative;
   color: white;
   background-color: $blueGray;
   border-radius: 0.6em;
