--- a/src/styles/ui/cards/Card.scss
+++ b/src/styles/ui/cards/Card.scss
@@ -15,6 +15,7 @@
   font-weight: 300;
   color: white;
   fill: white;
+  flex-shrink: 0;
 }
 
 .card-inner {
@@ -29,7 +30,6 @@
   height: 100%;
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
   position: absolute;
-  z-index: 10;
 }
 
 $borderMargin: 0.5em;
