DrawStack, PlayerHand: added, added animations

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -5,6 +5,9 @@ $blueGray: #484D59;
 $blueMediumGray: #5B6171;
 $blueLightGray: #676E80;
 
+//$availableCardColor: #5dde5d;
+$availableCardColor: #43de43;
+
 /* Font stuff */
 $themeFont: 'Montserrat', sans-serif;
 $rootFontSize: 18px; // this is rem
