--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -46,6 +46,7 @@ $dropShadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
 @mixin clickable {
   cursor: pointer;
   transition: 0.3s;
+  user-select: none;
   &:hover {
     filter: brightness(110%);
   }
