HelpWindow: fixed small bugs in DOM-nesting

--- a/src/styles/ui/help/CardHelp.scss
+++ b/src/styles/ui/help/CardHelp.scss
@@ -16,7 +16,7 @@
   margin-bottom: 1em;
 }
 
-.card-help-container strong {
+.help-container strong {
   font-weight: 500;
   color: $terracotta;
 }
