--- a/src/styles/ui/ingame/ChatLogBox.scss
+++ b/src/styles/ui/ingame/ChatLogBox.scss
@@ -9,6 +9,7 @@
   color: white;
   background-color: $blueGray;
   border-radius: 0.3em 0.3em 0 0;
+  box-shadow: $dropShadow;
 }
 
 .chat-log-content {
