--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -47,6 +47,7 @@ $dropShadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
   cursor: pointer;
   transition: 0.3s;
   user-select: none;
+  outline: none;
   &:hover {
     filter: brightness(110%);
   }
@@ -62,7 +63,7 @@ $dropShadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
   }
   &::-webkit-scrollbar-track {
     border-radius: 0.18rem;
-    -webkit-box-shadow: inset 0 0 0.36rem rgba(0,0,0,.3);
+    -webkit-box-shadow: inset 0 0 0.36rem rgba(0, 0, 0, .3);
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 0.18rem;
