Small css and util changes

--- a/src/styles/ui/cards/Card.scss
+++ b/src/styles/ui/cards/Card.scss
@@ -173,6 +173,7 @@ $ribbonColor: white;
   height: 1em;
   width: 1em;
   stroke: currentColor;
+  fill: currentColor;
   stroke-width: 0.1em;
   transform: rotate(-15deg);
 }
