--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -72,11 +72,11 @@ $dropShadow: 0 0.25em 0.25em rgba(0, 0, 0, 0.25);
 }
 
 .disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
+  opacity: 0.6 !important;
+  cursor: not-allowed !important;
 
   &:hover {
-    filter: none;
-    transform: none;
+    filter: none !important;
+    transform: none !important;
   }
 }
