--- a/src/styles/ui/pickers/Pickers.scss
+++ b/src/styles/ui/pickers/Pickers.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: flex-start;
   box-sizing: border-box;
-  margin: 0.5em;
+  margin: 0.5em 0.5em 0;
   padding: 0.5em;
   //background-color: $blueMediumGray;
   //border-radius: 0.3em;
@@ -63,4 +63,23 @@
 
 .picker-cn-number {
   font-size: 0.5em;
+}
+
+.picker-separator-container {
+  margin-top: 0.5em;
+  width: 100%;
+  @include center;
+}
+
+.picker-separator {
+  color: $terracotta;
+  font-weight: 500;
+  text-align: center;
+  flex-grow: 0;
+
+  &.line {
+    border-bottom: 0.1em solid $terracotta;
+    flex-grow: 1;
+    margin: 1em;
+  }
 }
