--- a/src/styles/ui/pickers/CardsToPlayersPicker.scss
+++ b/src/styles/ui/pickers/CardsToPlayersPicker.scss
@@ -14,6 +14,60 @@
   height: 5em;
 }
 
+.ctp-players {
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  height: 5em;
+  width: 100%;
+}
+
+.ctp-player-item {
+  position: relative;
+  font-size: 0.6em;
+  margin: 3em 5em 6em;
+  pointer-events: all;
+  transition: 0.3s;
+  min-height: 100%;
+
+  &.hovered {
+    filter: brightness(110%);
+  }
+}
+
+.ctp-player-item .opponent-avatar-container:hover {
+  cursor: pointer;
+}
+
+.ctp-player-mousecapture {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 130%;
+  min-width: 5em;
+  min-height: 5em;
+  //background-color: red;
+  z-index: 1;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.react-draggable-transparent-selection {
+  .ctp-player-mousecapture:hover {
+    cursor: grab;
+  }
+
+  .ctp-player-item .opponent-avatar-container:hover {
+    cursor: grab;
+  }
+}
+
 .ctp-card-item {
   cursor: grab;
   font-size: 0.5em;
@@ -25,6 +79,7 @@
   &:hover {
     filter: brightness(110%);
   }
+
   &:active {
     cursor: grabbing;
   }
