--- a/src/styles/ui/pickers/CardsToPlayersPicker.scss
+++ b/src/styles/ui/pickers/CardsToPlayersPicker.scss
@@ -8,6 +8,7 @@
 }
 
 .ctp-cards {
+  max-width: 90%;
   position: absolute;
   bottom: 0;
   @include center;
@@ -23,6 +24,7 @@
   justify-content: space-evenly;
   height: 5em;
   width: 100%;
+  transition: 0.3s;
 }
 
 .ctp-player-item {
@@ -68,10 +70,16 @@
   }
 }
 
+.ctp-card-shrinker {
+  min-width: 0;
+  flex-basis: auto;
+  flex-shrink: 1;
+  @include center;
+}
+
 .ctp-card-item {
   cursor: grab;
   font-size: 0.5em;
-  flex-shrink: 0;
   margin: 0.5em;
   border-radius: 0.8em;
   box-sizing: border-box;
