--- a/src/styles/ui/pickers/BasicPickers.scss
+++ b/src/styles/ui/pickers/BasicPickers.scss
@@ -72,11 +72,11 @@
   @include clickable;
   border-radius: 0.8em;
   box-sizing: border-box;
+  border: 0.28em solid transparent;
 
   &.active {
     border: 0.28em solid $terracotta;
     box-shadow: 0 0 1.4em $terracotta;
-    margin: 0.5 - 0.28em;
   }
 }
 
