--- a/src/styles/ui/pickers/CardsToPlayersPicker.scss
+++ b/src/styles/ui/pickers/CardsToPlayersPicker.scss
@@ -3,6 +3,7 @@
 .ctp-container {
   width: 100%;
   height: 90%;
+  min-height: 35em;
   position: relative;
   @include center;
 }
@@ -30,7 +31,7 @@
 .ctp-player-item {
   position: relative;
   font-size: 0.6em;
-  margin: 3em 5em 6em;
+  margin: 3em 5em 3em;
   pointer-events: all;
   transition: 0.3s;
   min-height: 100%;
