FantasticPicker: new picker for Fantastic and Fantastic Four

--- a/src/styles/ui/pickers/ConcretePickers.scss
+++ b/src/styles/ui/pickers/ConcretePickers.scss
@@ -1,12 +1,12 @@
 @import 'theme';
 
-.gift-exchange-picker {
+.concrete-picker-container {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.gift-exchange-spacer {
+.concrete-picker-spacer {
   height: 1.5em;
 }
