IconTitle: New component to show icons next to titles

--- a/src/styles/ui/UiElements.scss
+++ b/src/styles/ui/UiElements.scss
@@ -135,6 +135,17 @@ $buttonHeight: 1.75em;
   }
 }
 
+// IconTitle
+.icon-title {
+  display: flex;
+  align-items: center;
+}
+
+.icon-title-icon {
+  fill: currentColor;
+  margin-right: 0.5em;
+}
+
 // Separator
 
 .step-container {
