--- a/src/styles/ui/ingame/OverlayMessage.scss
+++ b/src/styles/ui/ingame/OverlayMessage.scss
@@ -5,13 +5,20 @@
   height: 100%;
   width: 120vw;
   background-color: $black;
-  @include center;
-  overflow: hidden;
   transform: rotate(-10deg);
+  overflow: visible;
+  @include center;
 
   & > * {
     transform: rotate(10deg);
   }
+}
+
+.event-overlay-content {
+  width: 100%;
+  height: 200%;
+  @include center;
+  overflow: hidden;
 }
 
 .overlay-message {
