--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -1,26 +1,26 @@
 @import 'theme';
 
 .point-limit-container {
-  width: 60%;
-  height: 2.8em;
+  width: 100%;
+  height: 2em;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: $blueMediumGray;
   box-shadow: $dropShadow;
   margin-bottom: 0.6em;
-  padding: 0.6em 0.9em 0.6em 0.6em;
+  padding: 0.2em 0.3em 0.2em 0.2em;
   border-radius: 0.3em;
   box-sizing: border-box;
   overflow: hidden;
-
-  &:first-child {
-    margin-top: 0.6em;
-  }
+  color: $terracotta;
+  font-size: 1.5em;
+  font-weight: 500;
 }
 
 .scoreboard-container {
   padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -30,7 +30,7 @@
 .scoreboard-item-container {
   @include center;
   margin-bottom: 0.6em;
-  width: 60%;
+  width: 100%;
 }
 
 .scoreboard-item {
@@ -70,7 +70,7 @@
 }
 
 .podium-item {
-  width: 18.7%;
+  width: 100%;
   height: 13em;
   margin-left: 0.4em;
   margin-right: 0.4em;
@@ -80,6 +80,7 @@
   justify-content: flex-end;
   align-items: center;
   border-radius: 0.3em;
+  overflow: hidden;
 }
 
 .avatar-container {
@@ -115,12 +116,14 @@
 
 .podium-text {
   margin-top: 0.2em;
+  font-size: 0.8em;
   font-weight: 500;
 }
 
 .podium-text-bottom {
   margin-top: 0.2em;
   margin-bottom: 0.6em;
+  font-size: 0.8em;
   font-weight: 500;
 }
 
