--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -1,7 +1,7 @@
 @import 'theme';
 
 .point-limit-container {
-  width: 100%;
+  width: 98%;
   height: 2em;
   display: flex;
   justify-content: center;
@@ -9,6 +9,7 @@
   background-color: $blueMediumGray;
   box-shadow: $dropShadow;
   margin-bottom: 0.6em;
+  margin-right: 0.4em;
   padding: 0.2em 0.3em 0.2em 0.2em;
   border-radius: 0.3em;
   box-sizing: border-box;
@@ -28,9 +29,10 @@
 }
 
 .scoreboard-item-container {
+  width: 98%;
   @include center;
   margin-bottom: 0.6em;
-  width: 100%;
+  margin-right: 0.6em;
 }
 
 .scoreboard-item {
@@ -64,6 +66,7 @@
 
 .podium-container {
   width: 100%;
+  margin-right: 0.4em;
   display: flex;
   justify-content: center;
   align-items: flex-end;
