--- a/src/styles/ui/ingame/OverlayMessage.scss
+++ b/src/styles/ui/ingame/OverlayMessage.scss
@@ -5,6 +5,7 @@
   height: 100%;
   width: 120vw;
   background-color: $black;
+  color: $terracotta;
   transform: rotate(-10deg);
   overflow: hidden;
   @include center;
