--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -83,6 +83,7 @@
   justify-content: flex-end;
   align-items: center;
   border-radius: 0.3em;
+  box-shadow: $dropShadow;
   overflow: hidden;
 }
 
